feature(ops): update docker config

--- a/Caddyfile
+++ b/Caddyfile
@@ -1,28 +1,46 @@
 {
-	# Mode dev, logs plus verbeux
-	autosave off
+  auto_https off
 }
 
 :80 {
-	encode zstd gzip
+  encode zstd gzip
 
-	# Next.js par défaut
-	handle {
-		reverse_proxy web:3000
-	}
+  # API sous /api, Symfony sans prefix interne
+  handle /api* {
+    uri strip_prefix /api
+    reverse_proxy api:9000 {
+      transport fastcgi {
+        split .php
 
-	# API Symfony sur /api
-	handle_path /api* {
-		root * /srv/api/public
-		php_fastcgi api:9000
-		file_server
-	}
+        # ----- chemins du CONTENEUR PHP -----
+        env DOCUMENT_ROOT   /var/www/html/public
+        env SCRIPT_FILENAME /var/www/html/public/index.php
+        env SCRIPT_NAME     /index.php
 
-	# Mercure Hub
-	handle /.well-known/mercure* {
-		reverse_proxy mercure:80
-	}
+        # ----- request basics -----
+        env REQUEST_METHOD  {method}
+        env REQUEST_URI     {uri}
+        env QUERY_STRING    {query}
+        env CONTENT_TYPE    {header.Content-Type}
+        env CONTENT_LENGTH  {header.Content-Length}
 
-	# Health
-	respond /healthz 200
+        # ----- proxy hints (sans X-Forwarded-Prefix) -----
+        env HTTP_HOST               {host}
+        env SERVER_NAME             {host}
+        env HTTP_X_FORWARDED_PROTO  {scheme}
+        env HTTP_X_FORWARDED_HOST   {host}
+        env HTTP_X_FORWARDED_PORT   {server_port}
+      }
+    }
+  }
+
+  handle /.well-known/mercure* {
+    reverse_proxy mercure:80
+  }
+
+  handle {
+    reverse_proxy web:3000
+  }
+
+  respond /healthz 200
 }
