--- a/api/config/routes.yaml
+++ b/api/config/routes.yaml
@@ -3,3 +3,7 @@ controllers:
         path: ../src/Controller/
         namespace: App\Controller
     type: attribute
+
+login:
+    path: /login
+    methods: ['POST']
