--- a/web/package.json
+++ b/web/package.json
@@ -10,21 +10,22 @@
     "format": "biome format --write"
   },
   "dependencies": {
+    "@ant-design/icons": "^5.6.0",
+    "antd": "^5.20.0",
+    "dayjs": "^1.11.13",
+    "next": "15.5.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "next": "15.5.0",
-    "antd": "^5.20.0",
-    "@ant-design/icons": "^5.6.0",
-    "dayjs": "^1.11.13"
+    "swr": "^2.3.6"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@biomejs/biome": "2.2.0",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "tailwindcss": "^3.4.0",
-    "postcss": "^8.4.31",
     "autoprefixer": "^10.4.16",
-    "@biomejs/biome": "2.2.0"
+    "postcss": "^8.4.31",
+    "tailwindcss": "^3.4.0",
+    "typescript": "^5"
   }
 }
