--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -39,9 +39,10 @@ services:
     environment:
       # Expose Next.js dev server on 3000 for Caddy
       PORT: 3000
+      HOSTNAME: 0.0.0.0
       # API URL pour les appels côté client (via Caddy)
       NEXT_PUBLIC_API_URL: http://localhost/api
-    command: sh -lc "rm -rf node_modules package-lock.json && yarn install && yarn dev"
+    command: sh -c "yarn dev"
     volumes:
       - ./web:/app:cached
     healthcheck:
