--- a/api/composer.json
+++ b/api/composer.json
@@ -17,8 +17,10 @@
         "symfony/asset": "7.3.*",
         "symfony/console": "7.3.*",
         "symfony/dotenv": "7.3.*",
+        "symfony/expression-language": "7.3.*",
         "symfony/flex": "^2",
         "symfony/framework-bundle": "7.3.*",
+        "symfony/mercure-bundle": "*",
         "symfony/property-info": "7.3.*",
         "symfony/routing": "7.3.*",
         "symfony/runtime": "7.3.*",
