fix(ops): update production build to avoid "tailwindcss not found" error

--- a/.platform/applications.yaml
+++ b/.platform/applications.yaml
@@ -89,7 +89,7 @@ web:
       set -x -e
 
       env
-      yarn install
+      yarn install --production=false --frozen-lockfile
       yarn build
 
   web:
