--- a/web/package.json
+++ b/web/package.json
@@ -16,7 +16,6 @@
     "next": "15.5.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "tailwindcss": "^3.4.0",
     "swr": "^2.3.6"
   },
   "devDependencies": {
@@ -25,7 +24,8 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "autoprefixer": "^10.4.16",
+    "typescript": "^5",
     "postcss": "^8.4.31",
-    "typescript": "^5"
+    "tailwindcss": "^3.4.0"
   }
 }
