fix(ops): add .environment file to source mercure env vars on platform.sh

--- a/.platform/routes.yaml
+++ b/.platform/routes.yaml
@@ -2,7 +2,7 @@
 "https://{all}/": { type: redirect, to: "https://www.{all}/" }
 "https://www.{all}/": { type: upstream, upstream: "web:http", primary: true }
 
-"https://mercure.{all}/": { id: mercure, type: upstream, upstream: "mercure:http", cache: { enabled: false } }
+"https://www.{all}/.well-known/mercure": { id: mercure, type: upstream, upstream: "mercure:http", cache: { enabled: false } }
 
 "https://www.{all}/bundles": { type: upstream, upstream: "api:http", cache: { enabled: false } }
 "https://www.{all}/api": { type: upstream, upstream: "api:http", cache: { enabled: false } }
