--- a/api/.env.dev
+++ b/api/.env.dev
@@ -2,3 +2,9 @@
 ###> symfony/framework-bundle ###
 APP_SECRET=4089a0a747d7d32feba3601f956fb795
 ###< symfony/framework-bundle ###
+
+###> symfony/mercure-bundle ###
+MERCURE_URL=http://mercure/.well-known/mercure
+MERCURE_PUBLIC_URL=http://mercure/.well-known/mercure
+MERCURE_JWT_SECRET="!ChangeMe!"
+###< symfony/mercure-bundle ###
